--- a/AntonStockApp/res/layout/activity_add_oe.xml
+++ b/AntonStockApp/res/layout/activity_add_oe.xml
@@ -21,20 +21,21 @@
             android:layout_height="wrap_content"
             android:text="@string/add_oe_prod_disponibles"
             android:textAppearance="?android:attr/textAppearanceLarge"
-            android:textSize="30sp" />
+            android:textSize="@dimen/oe_title_text_size" />
 
         <ListView
             android:id="@+id/productosDispo"
             android:layout_width="match_parent"
-            android:layout_height="313dp"
-            android:layout_weight="4.65" >
+            android:layout_height="@dimen/product_available_height"
+			android:layout_weight="1"            
+             >
         </ListView>
 
         <View
             android:layout_width="wrap_content"
             android:layout_height="4dp"
-            android:layout_marginBottom="10dp"
-            android:layout_marginTop="10dp"
+            android:layout_marginBottom="@dimen/oe_margin_sep"
+            android:layout_marginTop="@dimen/oe_margin_sep"
             android:background="@color/actionbar_theme_color" />
 
         <RelativeLayout
@@ -53,7 +54,7 @@
 
             <AutoCompleteTextView android:text=""
                 android:id="@+id/clienteCombo"
-                android:layout_height="60dp"
+                android:layout_height="@dimen/oe_input_height"
                 android:layout_width="match_parent"
                 android:layout_toRightOf="@+id/clienteLbl"
                  />
@@ -79,7 +80,7 @@
             android:layout_height="wrap_content"
             android:text="@string/add_oe_title_productos"
             android:textAppearance="?android:attr/textAppearanceLarge"
-            android:textSize="30sp" />
+            android:textSize="@dimen/oe_title_text_size" />
 
         <ListView
             android:id="@+id/productosPedido"
