--- a/AntonStockApp/res/layout/activity_partner_twopane.xml
+++ b/AntonStockApp/res/layout/activity_partner_twopane.xml
@@ -3,7 +3,7 @@
     android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="ar.com.antaresconsulting.antonstockapp.PartnerListActivity" >
+    tools:context="ar.com.antaresconsulting.antonstockapp.partner.PartnerListActivity" >
 <LinearLayout 
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -28,7 +28,6 @@
 
     <fragment
         android:id="@+id/partner_list"
-        android:name="ar.com.antaresconsulting.antonstockapp.PartnerListFragment"
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:layout_weight="2"
