--- a/AntonStockApp/res/layout/fragment_out_products_mp.xml
+++ b/AntonStockApp/res/layout/fragment_out_products_mp.xml
@@ -37,15 +37,15 @@
                 <Spinner
                     android:id="@+id/pedidosCombo"
                     android:layout_width="fill_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="@dimen/oe_input_height"
                     android:layout_weight="8" />
             </TableRow>
 
             <View
                 android:layout_width="wrap_content"
                 android:layout_height="4dp"
-                android:layout_marginBottom="10dp"
-                android:layout_marginTop="10dp"
+                android:layout_marginBottom="@dimen/oe_margin_sep"
+                android:layout_marginTop="@dimen/oe_margin_sep"
                 android:layout_span="2"
                 android:background="@color/actionbar_theme_color" />
 
@@ -60,7 +60,7 @@
             <ListView
                 android:id="@+id/productosDispo"
                 android:layout_width="match_parent"
-                android:layout_height="196dp"
+                android:layout_height="@dimen/product_available_height"
                 android:layout_weight="0.88"
                 android:choiceMode="singleChoice" >
             </ListView>
@@ -68,8 +68,8 @@
             <View
                 android:layout_width="wrap_content"
                 android:layout_height="4dp"
-                android:layout_marginBottom="10dp"
-                android:layout_marginTop="10dp"
+                android:layout_marginBottom="@dimen/oe_margin_sep"
+                android:layout_marginTop="@dimen/oe_margin_sep"
                 android:layout_span="2"
                 android:background="@color/actionbar_theme_color" />
 
@@ -91,10 +91,10 @@
                 android:layout_width="300dp"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
-                android:layout_marginBottom="10dp"
+                android:layout_marginBottom="@dimen/oe_margin_sep"
                 android:layout_marginLeft="40dp"
                 android:layout_marginRight="40dp"
-                android:layout_marginTop="10dp"
+                android:layout_marginTop="@dimen/oe_margin_sep"
                 android:nextFocusForward="@+id/placasList"
                 android:onClick="checkDispoPlacas"
                 android:singleLine="true"
@@ -111,7 +111,7 @@
             <Spinner
                 android:id="@+id/placasList"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="@dimen/oe_input_height"
                 android:layout_span="2"
                 android:nextFocusForward="@+id/cantPlacasDispo" />
 
@@ -139,8 +139,8 @@
             <View
                 android:layout_width="fill_parent"
                 android:layout_height="4dp"
-                android:layout_marginBottom="10dp"
-                android:layout_marginTop="10dp"
+                android:layout_marginBottom="@dimen/oe_margin_sep"
+                android:layout_marginTop="@dimen/oe_margin_sep"
                 android:layout_span="2"
                 android:background="@color/actionbar_theme_color" />
 
@@ -175,15 +175,15 @@
             android:layout_height="wrap_content"
             android:text="@string/out_prod_clientes"
             android:textAppearance="?android:attr/textAppearanceLarge"
-            android:textSize="30sp" />
+            android:textSize="@dimen/oe_title_text_size" />
 
         <TextView
             android:id="@+id/clienteNombre"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="10dp"
+            android:layout_marginBottom="@dimen/oe_margin_sep"
             android:layout_marginLeft="30dp"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="@dimen/oe_margin_sep"
             android:text="El Cliente"
             android:textAppearance="?android:attr/textAppearanceLarge" />
 
@@ -193,7 +193,7 @@
             android:layout_height="wrap_content"
             android:text="@string/out_prod_title_productos"
             android:textAppearance="?android:attr/textAppearanceLarge"
-            android:textSize="30sp" />
+            android:textSize="@dimen/oe_title_text_size" />
 
         <ExpandableListView
             android:id="@+id/productosEgreso"
