--- a/AntonStockApp/res/layout/activity_product_list.xml
+++ b/AntonStockApp/res/layout/activity_product_list.xml
@@ -3,10 +3,10 @@
     android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="ar.com.antaresconsulting.antonstockapp.ProductListActivity" >
+    tools:context="ar.com.antaresconsulting.antonstockapp.product.ProductListActivity" >
 <fragment 
     android:id="@+id/product_list"
-    android:name="ar.com.antaresconsulting.antonstockapp.ProductListFragment"
+    android:name="ar.com.antaresconsulting.antonstockapp.product.ProductListFragment"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_marginLeft="16dp"
