--- a/AntonStockApp/res/layout/activity_product_twopane.xml
+++ b/AntonStockApp/res/layout/activity_product_twopane.xml
@@ -3,7 +3,7 @@
     android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="ar.com.antaresconsulting.antonstockapp.ProductListActivity" >
+    tools:context="ar.com.antaresconsulting.antonstockapp.product.ProductListActivity" >
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -28,7 +28,7 @@
 
         <fragment
             android:id="@+id/product_list"
-            android:name="ar.com.antaresconsulting.antonstockapp.ProductListFragment"
+            android:name="ar.com.antaresconsulting.antonstockapp.product.ProductListFragment"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="2"
