--- a/AntonStockApp/res/layout/fragment_add_pminsumo.xml
+++ b/AntonStockApp/res/layout/fragment_add_pminsumo.xml
@@ -21,12 +21,13 @@
             android:layout_height="wrap_content"
             android:text="@string/add_pm_prod_dispo"
             android:textAppearance="?android:attr/textAppearanceLarge"
-            android:textSize="30sp" />
+            android:textSize="@dimen/pm_title_text_size" />
 
         <ListView
             android:id="@+id/productosDispo"
             android:layout_width="match_parent"
-            android:layout_height="328dp" >
+			android:layout_weight="1"            
+            android:layout_height="@dimen/product_available_height" >
         </ListView>
 
         <View
@@ -142,7 +143,7 @@
     </LinearLayout>
 
     <LinearLayout
-        android:id="@+id/LinearLayout1"
+        android:id="@+id/LinearLayout11"
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:layout_margin="10sp"
@@ -155,7 +156,7 @@
             android:layout_height="wrap_content"
             android:text="@string/add_pm_prod_in"
             android:textAppearance="?android:attr/textAppearanceLarge"
-            android:textSize="30sp" />
+            android:textSize="@dimen/pm_title_text_size"  />
 
         <ListView
             android:id="@+id/productosPedido"
