--- a/AntonStockApp/res/layout/fragment_add_product_action.xml
+++ b/AntonStockApp/res/layout/fragment_add_product_action.xml
@@ -12,7 +12,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/add_oe_prod_cantidad"
-        android:layout_marginBottom="20dp"
         android:textAppearance="?android:attr/textAppearanceMedium" />
 
     <EditText
@@ -25,8 +24,8 @@
     <View
         android:layout_width="fill_parent"
         android:layout_height="4dp"
-        android:layout_marginBottom="10dp"
-        android:layout_marginTop="10dp"
+        android:layout_marginBottom="@dimen/oe_margin_sep"
+        android:layout_marginTop="@dimen/oe_margin_sep"
         android:background="@color/actionbar_theme_color" />
 
     <ImageButton
